# mynews

./: .gitignore  README.md
extension/: manifest.json  package-lock.json  package.json  popup.html  popup.js
extension/scripts/: content.js
server/: Cargo.toml
server/src/: chat.rs  main.rs
