[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5", features = ["query"] }
thiserror = "1.0.40"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
